welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLAvant: Boolean): Double = {
	if (versLAvant == true) {
		for (pas <- 1 to nbPas) {
			avance();
			}
	} else {
		recule();
	}
}
